# secure-vehicle-management

./: LICENSE  README.md
secure-vehicle-management/: README.md  pyproject.toml  requirements.txt
secure-vehicle-management/configs/: config.yaml  logging.yaml
secure-vehicle-management/docker/: Dockerfile.client  Dockerfile.gateway  Dockerfile.monitor  Dockerfile.server  docker-compose.yml
secure-vehicle-management/docs/: INTERVIEW_REPORT.md
secure-vehicle-management/scripts/: demo_failure_recovery.sh  demo_security_integrity.py  generate_certs.sh
secure-vehicle-management/src/: __init__.py  client.py  gateway.py  monitor.py  server.py
secure-vehicle-management/src/utils/: __init__.py  config.py  crypto.py  parsing.py
secure-vehicle-management/tests/: test_crypto.py
